tests/parser/invalid/invalid_for_loop.src
fn main() {
    for (int i = 0; i < 10) {  // Ошибка: пропущена ;
        i = i + 1;
    }
}